// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fix: true 1`] = `
Array [
  Object {
    "content": "const x = 123;
",
    "filename": "unformatted.js",
  },
]
`;

exports[`format: default 1`] = `
"
  unformatted.js:0:7
  ⚠  0:7  Replace = with ·=·      prettier/prettier

  syntax-error.js:1:7
  ✖  1:7  Unexpected token (1:7)  prettier/prettier

  1 warning
  1 error

"
`;

exports[`ignorePath: ".ignore" 1`] = `
Array [
  Object {
    "errorCount": 0,
    "filePath": "node_modules/non-ignored.js",
    "messages": Array [],
    "source": "",
    "warningCount": 0,
  },
  Object {
    "errorCount": 0,
    "filePath": "non-ignored.js",
    "messages": Array [],
    "source": "",
    "warningCount": 0,
  },
]
`;

exports[`ignorePath: default, .prettierignore does not exist 1`] = `
Array [
  Object {
    "errorCount": 0,
    "filePath": "folder/non-ignored.js",
    "messages": Array [],
    "source": "",
    "warningCount": 0,
  },
  Object {
    "errorCount": 0,
    "filePath": "non-ignored.js",
    "messages": Array [],
    "source": "",
    "warningCount": 0,
  },
]
`;

exports[`ignorePath: default, .prettierignore exists 1`] = `
Array [
  Object {
    "errorCount": 0,
    "filePath": "node_modules/non-ignored.js",
    "messages": Array [],
    "source": "",
    "warningCount": 0,
  },
  Object {
    "errorCount": 0,
    "filePath": "non-ignored.js",
    "messages": Array [],
    "source": "",
    "warningCount": 0,
  },
]
`;
